# django-react-typescript

./: .env  .env.dev  .env.example  .gitignore  .gitlab-ci.yml  .pylintrc  .releaserc  CHANGELOG.md  Dockerfile  Dockerfile.hml  LICENCE  README.md  docker-compose-dev-db.yml  docker-compose.hml.yml  docker-compose.qa.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  ruff.toml  start.sh  start_frontend.sh
.github/: FUNDING.yml
.github/workflows/: build-and-test.yml  build_and_test.yml  codeql-analysis.yml  deploy-bare-metal.yml  deploy-vm-prod.yml  deploy-vm-qa.yml  deploy-vm.yml  deploy.yml  deploy_do.yml  deploy_do_hml.yml  deploy_hml.yml  deploy_host.yml  docker-publish.yml  node.js.yml  release.yml
.husky/: pre-commit
api/: serializers.py  urls.py  utils.py  views.py
api/filters/: publications.py
api/serializers/: __init__.py  publications.py  subscribers.py
api/users/: views.py
api/views/: lives.py  publications.py  subscribers.py
backend/: __init__.py  actions.py  admin.py  apps.py  signals.py  utils.py
backend/admin/: __init__.py  subscribers.py  (+1 more)
core/: asgi.py  urls.py  wsgi.py
frontend/: .env  .env.example  .gitlab-ci.yml  .unimportedrc.json  apps.py  babel.config.js  declarations.d.ts  index.tsx  jest.config.js  jest.setup.js  models.py  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  serviceWorker.ts  tailwind.config.js  tsconfig.json  tslint.json  urls.py  views.py  webpack.config.js
rtd/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: setup_env.sh
(+149 files in other folders)
